--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -24,8 +24,18 @@
                 </div>
             </div>
 
-            <div id = "PresBoardMainDisplay">
-                <img class = "MainSlideView" alt="" src="" />
+            <div id = "MainContentContainer">
+                <div id = "CommentCachePrev" class = "CommentCache">
+                    <img  alt="" src="" />
+                </div>
+
+                <div id = "PresBoardMainDisplay">
+                    <img class = "MainSlideView" alt="" src="" />
+                </div>
+
+                <div id = "CommentCacheNext" class = "CommentCache">
+                    <img alt="" src="" />
+                </div>
             </div>
 
             <div id="whiteBoard">
