--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -24,17 +24,19 @@
                 </div>
             </div>
 
-            <div id = "MainContentContainer">
-                <div id = "CommentCachePrev" class = "CommentCache">
-                    <img  alt="" src="" />
-                </div>
+            <div id = "MainContentSlideRegion">
+                <div id = "MainContentContainer">
+                    <div id = "CommentCachePrev" class = "CommentCache">
+                        <img  alt="" src="" />
+                    </div>
 
-                <div id = "PresBoardMainDisplay">
-                    <img class = "MainSlideView" alt="" src="" />
-                </div>
+                    <div id = "PresBoardMainDisplay">
+                        <img class = "MainSlideView" alt="" src="" />
+                    </div>
 
-                <div id = "CommentCacheNext" class = "CommentCache">
-                    <img alt="" src="" />
+                    <div id = "CommentCacheNext" class = "CommentCache">
+                        <img alt="" src="" />
+                    </div>
                 </div>
             </div>
 
