--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -27,7 +27,7 @@
             <div id = "MainContentSlideRegion">
                 <div id = "MainContentContainer">
                     <div id = "CommentCachePrev" class = "CommentCache">
-                        <img  alt="" src="" />
+                        <img  id = "CachePrevView" alt="" src="" />
                     </div>
 
                     <div id = "PresBoardMainDisplay">
@@ -35,7 +35,7 @@
                     </div>
 
                     <div id = "CommentCacheNext" class = "CommentCache">
-                        <img alt="" src="" />
+                        <img id = "CacheNextView" alt="" src="" />
                     </div>
                 </div>
             </div>
