Album view caching completed

--- a/POIProxy/CSS/poi.css
+++ b/POIProxy/CSS/poi.css
@@ -61,9 +61,11 @@ textarea {
     position: absolute; height: 100%; width: 100%; top: 0%;
 }
 
-#CommentCachePrev
+.CommentCacheView
 {
-    left: -100%;
+    border-radius: 8px ;
+    position: absolute; top: 1%; left: 1%; height: 98%; width: 98%; 
+    background-image: none;
 }
 
 #CommentCacheNext
@@ -79,19 +81,6 @@ textarea {
     background-image: none;
 }
 
-#CacheNextView
-{
-    border-radius: 8px ;
-    position: absolute; top: 1%; left: 1%; height: 98%; width: 98%; 
-    background-image: none;
-}
-
-#CachePrevView
-{
-    border-radius: 8px ;
-    position: absolute; top: 1%; left: 1%; height: 98%; width: 98%; 
-    background-image: none;   
-}
             
 .ui-slider .ui-slider-handle 
 { 
