hide whiteboard after sending comment

--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -188,6 +188,8 @@
             //Save the current drawing
             drawingTool.saveComment();
             alert("Comment has been sent!");
+
+            hideWhiteboard();
         });
 
         $("#Logo").css("cursor", "hand");
