Bug fixed: numComments in saving comment

--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -1346,7 +1346,7 @@
                 JSON.stringify(comment)
             );
 
-            setNumComments(numComments + 1);
+            setNumComments(slideIndex, numComments + 1);
         }
 
         this.getComment = function (slideIndex, commentIndex) {
