--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -32,6 +32,11 @@
                 </div>
             </div>
 
+            <div id = "FootBarContainer">
+                <span id = "NumCommentsLabel">0</span>
+                <img id = "CommentsLabel" />
+            </div>
+
             <div id="whiteBoard">
                 <div id = "canvasStack">
                     <img id = "imageLayer"/>
